# Raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  Camera.hpp  HitRecord.hpp  Hittable.cpp  Hittable.hpp  Log.cpp  Log.hpp  Material.cpp  Material.hpp  Ray.hpp  Raytracer.cpp  Renderer.cpp  Renderer.hpp  SceneSerializer.hpp  Util.hpp
